[package]
name = "device"
version = "0.0.1"
authors = ["The Servo Project Developers"]

[features]
default = ["bluetooth"]
bluetooth = ["blurz", "blurdroid"]
bluetooth-test = ["blurmock"]

[target.'cfg(target_os = "linux")'.dependencies]
blurz = { version = "0.2.1", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
blurdroid = { version = "0.1.1", optional = true }

[dependencies]
#blurmock = { version = "0.1.1", optional = true }
blurmock = { git = "https://github.com/szeged/blurmock", optional = true }
